# anemoi-core

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .venv-name  README.md  TODO.md  benchmark_knn_flex.py  check_importe.py  clean_up_todo.md  create-3km-lbc20km-latlon.py  d-2GPU-1hr-refc_input-finer_graph_v1-single_input-first_week-pl925500-reduced_vars-202405.sh  d-2GPU-1hr-refc_input-gnn-finer_graph_v1-single_input-first_week-pl925500-reduced_vars-202405.sh  d-2GPU-1hr-refc_input-graphtransformer-base-finer_graph_v1-single_input-day20240505-pl925500-reduced_vars-202405.sh  d-2GPU-1hr-refc_input-graphtransformer-base_1-finer_graph_v1-single_input-day20240505-pl925500-reduced_vars-202405.sh  d-2GPU-1hr-refc_input-graphtransformer-finer_graph_v1-single_input-day20240505-pl925500-reduced_vars-202405.sh  d-2GPU-1hr-refc_input-transformer-finer_graph_v1-single_input-day20240505-pl925500-reduced_vars-202405.sh  d-2GPU-1hr-refc_input-transformer-finer_graph_v1-single_input-first_week-pl925500-reduced_vars-202405.sh  d-2GPU-1hr-refc_value-base-refc_input-no_hydrometeors-finer_graph_v1-single_input-202405.sh  d-2GPU-1hr-refc_value-no_refc_input-202405.sh  d-2GPU-1hr-refc_value-no_refc_input-diffusion-finer_graph_v1-202405.sh  d-2GPU-1hr-refc_value-no_refc_input-finer_graph_v1-202405.sh  d-2GPU-1hr-refc_value-no_refc_input-finer_graph_v1-single_input-202405.sh  d-2GPU-1hr-refc_value-no_refc_input-gnn-202405.sh  d-2GPU-1hr-refc_value-no_refc_input-gnn-finer_graph_v1-202405.sh  d-2GPU-gh200-202505.sh  d-2GPU-gh200.sh  d-2GPU.sh  d-4GH-1hr-refc_value-no_refc_input-202405.sh  d-4GPU-123hr-202405.sh  d-4GPU-123hr-refc_tend-202405.sh  d-4GPU-123hr-refc_tend-no_refc_input-202405.sh  d-4GPU-123hr-refc_value-no_refc_input-202405.sh  d-4GPU-1hr-refc_value-no_refc_input-202405.sh  d-4GPU-202405.sh  d-restart-2GPU-1hr-refc_value-no_refc_input-finer_graph_v1-202405.sh  d-restart-2GPU-1hr-refc_value-no_refc_input-gnn-finer_graph_v1-202405.sh  d-restart-4GPU-123hr-refc_tend-202405.sh  (+33 more)
.github/: pull_request_template.md
agent/: no-pickle-env-findings.md  no-pickle-findings.md  no-pickle-plan.md  no-pickle-prompt.md  no-pickle-summary.md  parametrisation-refactor.md  parametrisation-release-notes.md  parametrisation-slides.md
anemoi-config-examples/: destine.yaml  hindcast_o1280.yaml  hindcast_o1280_dynamic.yaml  hindcast_o320.yaml  hindcast_o320_dynamic.yaml  slurm_run_atos.py  slurm_run_leo.py
configs/: debug.sh  debug_td.yaml  temporal_downscaler_ensemble.yaml
docs/: session-context.md
dr-out/: example.info  one_exp_out.info  plot_loss.py
graphs/: .readthedocs.yaml  .venv-name  CHANGELOG.md  (+1 more)
metadata/: .readthedocs.yaml  README.md  pyproject.toml
metadata/docs/: api.rst  cli.rst  conf.py  index.rst  versions.rst
metadata/src/anemoi/metadata/: __init__.py  __main__.py  base.py  checkpoint.py  exceptions.py  interface.py  migration.py  registry.py
metadata/src/anemoi/metadata/commands/: __init__.py  arrays.py  dump.py  edit.py  get.py  info.py  load.py  remove.py  view.py
metadata/src/anemoi/metadata/migrations/: __init__.py  _example.py  v0_to_v1.py
metadata/src/anemoi/metadata/mixins/: __init__.py  validation.py  variables.py
metadata/src/anemoi/metadata/versions/: __init__.py  v0.py  v1.py
metadata/tests/: conftest.py
metadata/tests/unit/: test_base.py  test_checkpoint.py  test_end_to_end.py  test_inference_metadata.py  test_interface.py  test_migration.py  test_mixins.py  test_registry.py  test_schema_v0.py  test_schema_v1.py  test_v0_to_v1.py
(+1823 files in other folders)
